@@ -205,129 +205,7 @@ distclean-local:
 
 EXTRA_DIST = $(man_MANS) \
 	tests/common.sh tests/soak-test \
-	tests/newline1/run-test \
-	tests/newline2/run-test \
-	tests/newline3/run-test \
-	tests/newline4/run-test \
-	tests/newline5/run-test \
-	tests/create1/run-test \
-	tests/broken1/run-test \
-	tests/revert1/run-test \
-	tests/revert2/run-test \
-	tests/dashes/run-test \
-	tests/dashes1/run-test \
-	tests/dashes2/run-test \
-	tests/dashes3/run-test \
-	tests/dashes4/run-test \
-	tests/linux-2.4.0-test-pre-style/run-test \
-	tests/linux-2.2.17-pre4-5/run-test \
-	tests/linux-2.4.13-ac6-7/run-test \
-	tests/apply1/run-test \
-	tests/copy1/run-test \
-	tests/edit1/run-test \
-	tests/edit2/run-test \
-	tests/edit3/run-test \
-	tests/edit4/run-test \
-	tests/edit5/run-test \
-	tests/edit6/run-test \
-	tests/edit7/run-test \
-	tests/edit8/run-test \
-	tests/edit9/run-test \
-	tests/edit10/run-test \
-	tests/combine1/run-test \
-	tests/combine2/run-test \
-	tests/combine3/run-test \
-	tests/gendiff1/run-test \
-	tests/gendiff2/run-test \
-	tests/comma/run-test \
-	tests/addhunk1/run-test \
-	tests/addhunk2/run-test \
-	tests/addhunk3/run-test \
-	tests/delhunk1/run-test \
-	tests/delhunk2/run-test \
-	tests/delhunk3/run-test \
-	tests/delhunk4/run-test \
-	tests/delhunk5/run-test \
-	tests/trimcontext1/run-test \
-	tests/nodate/run-test \
-	tests/lsdiff1/run-test \
-	tests/lsdiff2/run-test \
-	tests/lsdiff3/run-test \
-	tests/lsdiff4/run-test \
-	tests/lsdiff5/run-test \
-	tests/lsdiff6/run-test \
-	tests/lsdiff7/run-test \
-	tests/lsdiff8/run-test \
-	tests/lsdiff9/run-test \
-	tests/lsdiff10/run-test \
-	tests/lsdiff11/run-test \
-	tests/lsdiff12/run-test \
-	tests/lsdiff13/run-test \
-	tests/lsdiff14/run-test \
-	tests/lsdiff15/run-test \
-	tests/fuzz1/run-test \
-	tests/U0/run-test \
-	tests/U3/run-test \
-	tests/grepdiff1/run-test \
-	tests/grepdiff2/run-test \
-	tests/grepdiff3/run-test \
-	tests/grepdiff4/run-test \
-	tests/grepdiff5/run-test \
-	tests/grepdiff6/run-test \
-	tests/grepdiff7/run-test \
-	tests/number1/run-test \
-	tests/number2/run-test \
-	tests/nondiff/run-test \
-	tests/nondiff1/run-test \
-	tests/lscontext1/run-test \
-	tests/lscontext2/run-test \
-	tests/filterp/run-test \
-	tests/select1/run-test \
-	tests/select2/run-test \
-	tests/select3/run-test \
-	tests/select4/run-test \
-	tests/select5/run-test \
-	tests/select6/run-test \
-	tests/select7/run-test \
-	tests/select8/run-test \
-	tests/select9/run-test \
-	tests/preserve1/run-test \
-	tests/rediff1/run-test \
-	tests/recount1/run-test \
-	tests/recount2/run-test \
-	tests/recount3/run-test \
-	tests/recount4/run-test \
-	tests/recount5/run-test \
-	tests/recount6/run-test \
-	tests/unwrapdiff1/run-test \
-	tests/overstrip/run-test \
-	tests/context1/run-test \
-	tests/flip1/run-test \
-	tests/flip2/run-test \
-	tests/flip3/run-test \
-	tests/flip4/run-test \
-	tests/flip5/run-test \
-	tests/flip6/run-test \
-	tests/flip7/run-test \
-	tests/flip8/run-test \
-	tests/flip9/run-test \
-	tests/flip10/run-test \
-	tests/flip11/run-test \
-	tests/flip12/run-test \
-	tests/flip13/run-test \
-	tests/flip14/run-test \
-	tests/flip15/run-test \
-	tests/flip16/run-test \
-	tests/flip17/run-test \
-	tests/flip18/run-test \
-	tests/flip19/run-test \
-	tests/unline1/run-test \
-	tests/nul0/run-test \
-	tests/nul1/run-test \
-	tests/nul2/run-test \
-	tests/nul3/run-test \
-	tests/convert1/run-test \
-	tests/convert2/run-test \
+	$(TESTS) $(XFAIL_TESTS) \
 	BUGS COPYING TODO ChangeLog \
 	bootstrap \
 	patchutils.spec \
